<resources>
    <string name="app_name">Yeah! Streamer</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>

    <string name="email">Email Address</string>
    <string name="pw">Password</string>
    <string name="pwa">Password again</string>
    <string name="login">Log In</string>
    <string name="signin">Sign In</string>
    <string name="gtLogin">Go To Login</string>
    <string name="register">Go To Register</string>

    <string name="signinToMain">SignInToMainActivity</string>

    <string name="nostations">No Radio Stations\navailable!</string>

    <string name="addname">Add Radio Station Name</string>
    <string name="addstadion">Add Radio Station URL</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
