<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.yeahdev.yeahstreamer.activities.SignInActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="top"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/civLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border="true"
            app:civ_border_color="@color/colorPrimaryDark">
        </com.mikhaellopez.circularimageview.CircularImageView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="40sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"
            android:typeface="normal">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pw"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:typeface="normal">
        </EditText>

        <EditText
            android:id="@+id/etPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pwa"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:inputType="text|textPassword"
            android:fontFamily="sans-serif"
            android:typeface="normal"
            android:visibility="gone">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFooter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="bottom|center"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/textColor"
            android:transitionName="@string/signinToMain"
            style="@style/Widget.AppCompat.Button.Colored">
        </Button>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/signin"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/textColor"
            android:transitionName="@string/signinToMain"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Colored">
         </Button>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/textColor">
        </TextView>
    </LinearLayout>
</LinearLayout>
