<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="220dp"
    android:background="@color/windowBackgroundLight"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addname"
        android:textSize="20sp"
        android:textColor="@color/textColorDark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etRadioStationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addstadion"
        android:textSize="20sp"
        android:textColor="@color/textColorDark"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etRadioStationUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorDark"
        android:inputType="textUri"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorAccent"
            style="?buttonBarNegativeButtonStyle"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ok"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorPrimary"
            style="?buttonBarPositiveButtonStyle"/>

    </LinearLayout>

</LinearLayout>